# logistics2026-mcu

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  chassis.ioc  wtrproject.toml
.trellis/spec/backend/: database-guidelines.md  directory-structure.md  embedded-firmware-contracts.md  error-handling.md  index.md  logging-guidelines.md  quality-guidelines.md
.trellis/spec/frontend/: component-guidelines.md  directory-structure.md  hook-guidelines.md  index.md  quality-guidelines.md  state-management.md  type-safety.md
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/tasks/06-01-pure-mecanum-chassis-port/: prd.md  task.json
.trellis/tasks/archive/2026-06/00-bootstrap-guidelines/: task.json
.trellis/tasks/archive/2026-06/06-01-pure-mecanum-chassis-port/: task.json
.trellis/workspace/syhanjin/: index.md  journal-1.md
Modules/ChassisController/: CMakeLists.txt  README.md
Modules/ChassisController/Chassis/: CMakeLists.txt
Modules/ChassisController/Chassis/Mecanum4/: CMakeLists.txt  Mecanum4.cpp  Mecanum4.hpp  cpkg.toml
Modules/ChassisController/Chassis/Omni4/: CMakeLists.txt  Omni4.cpp  Omni4.hpp  cpkg.toml
Modules/ChassisController/Chassis/Steering4/: CMakeLists.txt  README.md  Steering4.hpp  SteeringWheel.cpp  SteeringWheel.hpp  cpkg.toml
Modules/ChassisController/Controller/: CMakeLists.txt
Modules/ChassisController/Controller/Master/: CMakeLists.txt  Master.hpp  README.md  cpkg.toml
Modules/ChassisController/Controller/Slave/: CMakeLists.txt  README.md  Slave.hpp  cpkg.toml
Modules/ChassisController/Core/: CMakeLists.txt  IChassisController.hpp  IChassisDef.hpp  IChassisLoc.hpp  IChassisMotion.hpp  cpkg.toml
Modules/ChassisController/Localization/: CMakeLists.txt
Modules/ChassisController/Localization/EKF/: CMakeLists.txt  LocEKF.hpp  README.md  cpkg.toml
Modules/ChassisController/Localization/JustEncoder/: CMakeLists.txt  JustEncoder.cpp  JustEncoder.hpp  cpkg.toml
Modules/MotorDrivers/: CMakeLists.txt  README.md
Modules/MotorDrivers/controllers/: CMakeLists.txt  cpkg.toml  motor_pos_controller.cpp  motor_pos_controller.hpp  motor_vel_controller.cpp  motor_vel_controller.hpp
Modules/MotorDrivers/core/: CMakeLists.txt  cpkg.toml  motor_if.hpp
Modules/MotorDrivers/motors/DJI/: CMakeLists.txt  README.md  cpkg.toml  dji.cpp  dji.hpp
Modules/MotorDrivers/motors/DM/: CMakeLists.txt  README.md  cpkg.toml  dm.cpp
Modules/MotorDrivers/motors/VESC/: CMakeLists.txt  README.md  cpkg.toml  vesc.cpp  vesc.hpp
Modules/Sensors/: CMakeLists.txt
Modules/Sensors/gyro/HWT101CT/: CMakeLists.txt  HWT101CT.cpp  HWT101CT.hpp  cpkg.toml
Modules/Sensors/gyro/JY901S/: CMakeLists.txt  JY901S.cpp  JY901S.hpp  cpkg.toml
Modules/Sensors/laser/dt35/: CMakeLists.txt  DT35.cpp  DT35.hpp  cpkg.toml
Modules/Sensors/laser/stp23l/: CMakeLists.txt  STP23L.cpp  STP23L.hpp  cpkg.toml
Modules/Sensors/ops/ActionOPS/: ActionOPS.cpp  ActionOPS.hpp  CMakeLists.txt  cpkg.toml
Modules/Sensors/pressure/XGZP6847D/: CMakeLists.txt  XGZP6847DDevice.cpp  XGZP6847DDevice.hpp  cpkg.toml
Modules/VelocityProfile/: CMakeLists.txt  README.md
Modules/VelocityProfile/.github/workflows/: trigger-cpkg-index.yml
Modules/VelocityProfile/Core/: CMakeLists.txt  IVelocityProfile.hpp  cpkg.toml
Modules/VelocityProfile/SCurve/: CMakeLists.txt  README.md  cpkg.toml
Modules/VelocityProfile/SCurve/simulation/: plot_chassis_display.py  plot_display.py  pyproject.toml  s_curve.py
Modules/VelocityProfile/SCurve/src/: s_curve.cpp  s_curve.hpp  带初末状态约束的 S 形曲线路径规划.md
UserCode/: app.cpp  arena.cpp  device.cpp  device.hpp  project_parts.hpp  protocol.hpp  system.hpp
UserCode/chassis/: Config.hpp  chassis.cpp  chassis.hpp
UserCode/protocol/: PCCommandDef.hpp  PCCommandHandler.cpp  PCCommandHandler.hpp  PCFeedback.cpp  PCFeedback.hpp  PCProtocol.cpp  PCProtocol.hpp
UserCode/sync/: Clock.hpp
cmake/: wtr_modules.cmake
cmake/stm32cubemx/: CMakeLists.txt
